--- a/meter_reading.html
+++ b/meter_reading.html
@@ -978,10 +978,13 @@
                             prevReadingText += ` [${diff >= 0 ? '+' : ''}${diff}]`;
                           }
                           
-                          const initialUsageDisplay = calculateUsageDisplay(reading.currentReading, reading.previousReading);                          return (
+                          const initialUsageDisplay = calculateUsageDisplay(reading.currentReading, reading.previousReading);
+
+                          return (
                             <tr key={index}>
                               <td data-label="検針日時">{formattedDate}</td>
-                              <td data-label="今回(㎥)">                                <input
+                              <td data-label="今回(㎥)">
+                                <input
                                   type="number"
                                   step="any"
                                   defaultValue={reading.currentReading || ''}
