--- a/meter_reading.html
+++ b/meter_reading.html
@@ -302,7 +302,7 @@
       .mantine-table tbody tr {
         display: grid !important;
         grid-template-columns: 1fr 1fr;
-        grid-template-rows: auto auto auto auto auto auto;
+        grid-template-rows: repeat(6, auto);
         gap: 0.5em;
         margin-bottom: 1.5em;
         border-bottom: 2px solid var(--mantine-color-gray-3);
@@ -311,6 +311,7 @@
         border-radius: var(--mantine-radius-sm);
         background-color: white;
         position: relative;
+        align-items: start;
       }      
       .mantine-table td {
         display: block;
@@ -323,6 +324,7 @@
         font-size: 1.3rem;
         line-height: 1.4;
         box-sizing: border-box;
+        margin: 0;
       }
       
       /* 左列: 検針日時、今回(㎥) */
@@ -336,7 +338,7 @@
         grid-row: 2;
       }
       
-      /* 右列: 前回、前々回、前々々回、今回使用量、状態 */
+      /* 右列: 前回から順番に配置 */
       .mantine-table td[data-label="前回"] {
         grid-column: 2;
         grid-row: 1;
@@ -360,7 +362,7 @@
       .mantine-table td[data-label="状態"] {
         grid-column: 2;
         grid-row: 5;
-      }      
+      }
       /* 写真は全幅 */
       .mantine-table td[data-label="写真"] {
         grid-column: 1 / -1;
