--- a/meter_reading.html
+++ b/meter_reading.html
@@ -1126,34 +1126,51 @@
                   {updating ? <div className="mantine-loader" style={{width: '28px', height: '28px', borderTopColor: 'white'}}></div> : '💾'}
                 </button>
               </div>
-            )}
-
-            <div className={`toast-notification ${showToast ? 'show' : ''}`} style={{
-              position: 'fixed',
-              bottom: '90px',
-              left: '50%',
-              transform: 'translateX(-50%)',
-              backgroundColor: 'var(--mantine-color-gray-8)',
-              color: 'white',
-              padding: '12px 20px',
-              borderRadius: 'var(--mantine-radius-md)',
-              zIndex: 2000,
-              opacity: 0,
-              visibility: 'hidden',
-              transition: 'opacity 0.3s ease, visibility 0.3s ease',
-              boxShadow: '0 2px 8px rgba(0,0,0,0.15)'
-            }}>
-              {toastMessage}
-            </div>            <style>
+            )}            {showToast && (
+              <div style={{
+                position: 'fixed',
+                top: 0,
+                left: 0,
+                width: '100%',
+                height: '100%',
+                backgroundColor: 'rgba(0, 0, 0, 0.6)',
+                zIndex: 2000,
+                display: 'flex',
+                alignItems: 'center',
+                justifyContent: 'center'
+              }}>
+                <div style={{
+                  backgroundColor: 'var(--mantine-color-blue-6)',
+                  color: 'white',
+                  padding: '24px 32px',
+                  borderRadius: 'var(--mantine-radius-lg)',
+                  boxShadow: '0 8px 32px rgba(0,0,0,0.3)',
+                  fontSize: '1.2rem',
+                  fontWeight: '600',
+                  textAlign: 'center',
+                  minWidth: '240px',
+                  animation: 'fadeInScale 0.3s ease-out'
+                }}>
+                  {toastMessage}
+                </div>
+              </div>
+            )}            <style>
               {`
-                .toast-notification.show {
-                  opacity: 1;
-                  visibility: visible;
-                }
                 .inline-error {
                     color: var(--mantine-color-red-6);
                     font-size: 0.85em;
                     margin-top: 4px;
+                }
+                
+                @keyframes fadeInScale {
+                  0% {
+                    opacity: 0;
+                    transform: scale(0.8);
+                  }
+                  100% {
+                    opacity: 1;
+                    transform: scale(1);
+                  }
                 }
               `}
             </style>
