--- a/meter_reading.html
+++ b/meter_reading.html
@@ -522,11 +522,9 @@
 
           <div className="content-area mantine-container">
             <div className="mantine-stack">
-              
-              <div className="property-info-card">
+                <div className="property-info-card">
                 <h2 className="property-name">{propertyName}</h2>
-                <p className="room-label">部屋:</p>
-                <p className="room-name">{roomName}</p>
+                <p className="room-info">部屋: {roomName}</p>
               </div>
 
               <div className="mantine-paper reading-history-container" style={{padding: 'var(--mantine-spacing-xs)', margin: '0'}}>                <h3 className="mantine-subtitle" style={{ textAlign: 'center', marginBottom: 'var(--mantine-spacing-md)' }}>検針履歴</h3>
