--- a/meter_reading.html
+++ b/meter_reading.html
@@ -567,7 +567,7 @@
                         
                         return (                          <tr key={index}>
                             <td data-label="検針日時">
-                              検針日時: {formattedDate}
+                              最終検針日: {formattedDate}
                             </td>
                             <td data-label="今回指示数(㎥)">
                               <input 
@@ -625,20 +625,22 @@
                               }}>
                                 {statusDisplay}
                               </span>
-                            </td>                            {previousReadingsInfo && previousReadingsInfo.length > 0 && (
-                              <td data-label="前回履歴">
+                            </td>                            <td data-label="前回履歴">
+                              {previousReadingsInfo && previousReadingsInfo.length > 0 ? (
                                 <div style={{ lineHeight: '1.6' }}>
                                   {previousReadingsInfo.map((info, infoIndex) => (
                                     <div key={infoIndex} style={{ 
-                                      marginBottom: infoIndex < previousReadingsInfo.length - 1 ? '6px' : '0',
-                                      fontSize: '1rem'
+                                      marginBottom: infoIndex < previousReadingsInfo.length - 1 ? '6px' : '0'
                                     }}>
                                       {info}
                                     </div>
                                   ))}
                                 </div>
-                              </td>
-                            )}                            <td data-label="写真">
+                              ) : (
+                                <div>-</div>
+                              )}
+                            </td>
+                            <td data-label="写真">
                               <div style={{ display: 'flex', flexDirection: 'column', gap: '8px' }}>
                                 <button 
                                   className="mantine-button variant-filled" 
@@ -677,8 +679,8 @@
                       </p>
                     </div>
                     <div className="mantine-paper" style={{marginTop: 'var(--mantine-spacing-md)', padding: 'var(--mantine-spacing-md)'}}>
-                      <h4 className="mantine-subtitle" style={{marginBottom: 'var(--mantine-spacing-sm)'}}>初回データ入力</h4>
-                      <div className="mantine-stack" style={{gap: 'var(--mantine-spacing-lg)'}}>                        <div>
+                      <h4 className="mantine-subtitle" style={{marginBottom: 'var(--mantine-spacing-sm)'}}>初回データ入力</h4>                      <div className="mantine-stack" style={{gap: 'var(--mantine-spacing-lg)'}}>
+                        <div>
                           <label htmlFor="initialReadingDate" className="mantine-text weight-600" style={{fontSize: '0.9rem', marginBottom: '4px', display: 'block'}}>検針日:</label>
                           <input 
                             type="text" 
@@ -722,7 +724,8 @@
                               {inputErrors[new Date().toISOString().split('T')[0]]}
                             </div>
                           )}
-                        </div>                        <div>
+                        </div>
+                        <div>
                           <label className="mantine-text weight-600" style={{fontSize: '0.9rem', marginBottom: '4px', display: 'block'}}>写真:</label>
                           <div style={{ display: 'flex', flexDirection: 'column', gap: '8px' }}>
                             <button
@@ -754,8 +757,7 @@
                               </button>
                             )}
                           </div>
-                        </div>
-                      </div>
+                        </div>                      </div>
                     </div>
                   </div>
                 )}
