--- a/meter_reading.html
+++ b/meter_reading.html
@@ -539,6 +539,7 @@
                 <h2 className="property-name">{propertyName}</h2>
                 <p className="room-info">部屋: {roomName}</p>
               </div>              <div className="mantine-paper reading-history-container" style={{padding: 'var(--mantine-spacing-xs)', margin: '0'}}>
+                <h3 className="mantine-subtitle desktop-only" style={{ textAlign: 'center', marginBottom: 'var(--mantine-spacing-md)' }}>検針履歴</h3>
                 {Array.isArray(meterReadings) && meterReadings.length > 0 ? (
                   <table className="mantine-table">
                     <thead style={{ display: 'none' }}>
