--- a/property_select.html
+++ b/property_select.html
@@ -24,10 +24,9 @@
       const [properties, setProperties] = React.useState([]);
       const [searchTerm, setSearchTerm] = React.useState('');
       const [loading, setLoading] = React.useState(true);
-      const [error, setError] = React.useState(null);
-      const [woffInitialized, setWoffInitialized] = React.useState(false);
+      const [error, setError] = React.useState(null);      const [woffInitialized, setWoffInitialized] = React.useState(false);
 
-      const gasWebAppUrl = 'https://script.google.com/macros/s/AKfycbwGbYg6PgMsYg0hXOvRx13ka3jcoutJyNczsFqrAk17XTWmQRvLxIW5rJv2NVXQlc7fVw/exec';
+      const gasWebAppUrl = 'https://script.google.com/macros/s/AKfycbxAHusba4MsRks4sEfL1cpiFlm1cYv_P7IEkoLStiaaH3KgitcmUx3jFxfmAqpQwNyDCA/exec';
       const woffIdForWorks = "Mtmj4rddmxBddYCPD0G81A";
 
       React.useEffect(() => {
