--- a/test_gas_connection.html
+++ b/test_gas_connection.html
@@ -49,9 +49,8 @@
     </div>
 
     <script>
-        // GAS Web App URL (property_select.htmlから取得、またはテスト用URL)
-        const gasWebAppUrl = sessionStorage.getItem('gasWebAppUrl') || 
-                           'https://script.google.com/macros/s/AKfycbxAHusba4MsRks4sEfL1cpiFlm1cYv_P7IEkoLStiaaH3KgitcmUx3jFxfmAqpQwNyDCA/exec';
+        // GAS Web App URL (property_select.htmlから取得、またはテスト用URL)        const gasWebAppUrl = sessionStorage.getItem('gasWebAppUrl') || 
+                           'https://script.google.com/macros/s/AKfycbzra0CxJmciDBNons98S3F1jPCYsZqCHl2r-ZeDG6IkGjZ64f0qgEXkZguaIxLwriTUcA/exec';
         
         console.log('使用するGAS URL:', gasWebAppUrl);
 
