--- a/test_gas_connection.html
+++ b/test_gas_connection.html
@@ -48,9 +48,8 @@
         <div id="inspection-result" class="result"></div>
     </div>
 
-    <script>
-        // GAS Web App URL (property_select.htmlから取得、またはテスト用URL)        const gasWebAppUrl = sessionStorage.getItem('gasWebAppUrl') || 
-                           'https://script.google.com/macros/s/AKfycbzra0CxJmciDBNons98S3F1jPCYsZqCHl2r-ZeDG6IkGjZ64f0qgEXkZguaIxLwriTUcA/exec';
+    <script>        // GAS Web App URL (property_select.htmlから取得、またはテスト用URL)      const gasWebAppUrl = sessionStorage.getItem('gasWebAppUrl') || 
+                       'https://script.google.com/macros/s/AKfycbxvm8ZSIvupRN4MgsU7nf386MFiCcn9yq-3hecJY_ppdkr2Qmz4rmzaVj82ivJUBzWGXQ/exec';
         
         console.log('使用するGAS URL:', gasWebAppUrl);
 
