--- a/test_gas_connection.html
+++ b/test_gas_connection.html
@@ -48,8 +48,9 @@
         <div id="inspection-result" class="result"></div>
     </div>
 
-    <script>        // GAS Web App URL (property_select.htmlから取得、またはテスト用URL)      const gasWebAppUrl = sessionStorage.getItem('gasWebAppUrl') || 
-                       'https://script.google.com/macros/s/AKfycbxvm8ZSIvupRN4MgsU7nf386MFiCcn9yq-3hecJY_ppdkr2Qmz4rmzaVj82ivJUBzWGXQ/exec';
+    <script>        // GAS Web App URL (property_select.htmlから取得、またはテスト用URL)
+        const gasWebAppUrl = sessionStorage.getItem('gasWebAppUrl') || 
+                       'https://script.google.com/macros/s/AKfycbzJzOzH5jkDAnpsclbidD5Wdc8M5lgu8SNSM8TJKX0QaKYKHnB8IdNNrwP-tN1erjnS4Q/exec';
         
         console.log('使用するGAS URL:', gasWebAppUrl);
 
